data/derived/comb/progs/unify/prog7047.ml.out
Characters 32-49:
  let stringOfList f l = List.map (sepConcat ";" l) l;;
                                  ^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a -> 'b
